chore: add run.sh wrapper and GUI run support; commit prior fixes